--- a/monitoring/grafana/provisioning/datasources/prometheus.yml
+++ b/monitoring/grafana/provisioning/datasources/prometheus.yml
@@ -4,10 +4,7 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    # ⚠️ IMPORTANTE: Después de desplegar en Render, actualiza esta URL
-    # Opción 1: Edita manualmente en Grafana UI (Configuration → Data Sources)
-    # Opción 2: Edita este archivo con la URL de tu Prometheus en Render y haz redeploy
-    # Ejemplo: https://prometheus-tracking.onrender.com
-    url: http://localhost:9090
+    # URL de Prometheus en Render
+    url: https://prometheus-tracking.onrender.com
     isDefault: true
     editable: true
