--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -11,7 +11,9 @@ scrape_configs:
     static_configs:
       - targets: ['api-cluster-tracking.sumax.pe']
     scrape_interval: 5s
-    scrape_timeout: 3s
+    scrape_timeout: 10s
+    tls_config:
+      insecure_skip_verify: true
     
   - job_name: 'prometheus'
     static_configs:
